@@ -16,6 +16,8 @@ Features
 Bugfixes
 --------
 
+* Disable ``archive_rss`` link handler, which was useless because no
+  such RSS was ever generated (Issue #2783)
 * Ignore files ending wih "bak" (Issue #2740)
 * Use page.tmpl by default, which is inherited from story.tmpl (Issue
   #1891)
